{
    "name": "PCPlayerController",
    "maps": [
        {
            "name": "Player",
            "id": "f4b412d9-9f11-4e97-b1fe-ae9e59cfe61f",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "5fd9d229-f04a-4ae5-800b-15e09e2b6016",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "debfe8e5-7a8f-417e-94c5-68e7804342b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TakeDamage",
                    "type": "Button",
                    "id": "0586cfe7-e15c-479d-ba0f-b2575a600eb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b081e8f3-7e5a-43b9-bb73-194708203ccf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71e08a61-e069-4f3c-aeb0-3844e1990d3a",
                    "path": "<Mouse>/forwardButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61baf509-b968-4089-8bf5-2920258bad1d",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeDamage",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}